# Protein-Folding

./: .coverage  .gitignore  404.html  CITATION.cff  Cosmic-Math.html  DISTRIBUTED_COMPUTING_INTEGRATION.html  Dockerfile  LICENSE  LICENSE.md  Lattice-Visualizer.html  MODELS.md  Modelfile  NRC-Playground-Guide.html  NRC-Protein-Folding.aux  NRC-Protein-Folding.out  NRC-Protein-Folding.tex  README.md  agri_structural_mapping.json  app.py  architecture.html  biophysics.py  cancer_structural_mapping.json  deposition.py  folder.py  generate_library.py  index.html  local_esmfold.py  math-foundations.html  mkdocs.yml  neuro_structural_mapping.json  nrc_engine.py  omni_engine.py  pediatric_structural_mapping.json  pyproject.toml  reporting.py  requirements.txt  setup_venv.sh
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: test-sequence.yml
.github/prompts/: accelerated-vs-standard-comparison.prompt.yml  explain-folding-results.prompt.yml  folding-simulation-verifier.prompt.yml  folding-verifier.prompt.yml  lattice-accelerated-folding-comparison.prompt.yml  protein-design-assistant.prompt.yml  protein-lattice-visualization-explainer.prompt.yml  rmsd-convergence-tester.prompt.yml
.github/workflows/: ci.yml  folding-evals.yml  latex-build.yml  prompt-evals.yml  static.yml
.hypothesis/constants/: 0599e6ad4ad2461f  1a912a121e0e6e62  4ad8190432d89566  694d40125be52078  9c26cb1834c90072  a2d7b00b1cc29576  b341e50b99ea598c  b38990288ef251cf  da39a3ee5e6b4b0d
.legal_legacy/: LICENSE.md
Nexus-Resonance-Codex-tex-files/: NRC-Protein-Folding.tex  NRC-Protein-Folding.toc
Nexus-Resonance-Codex-tex-files/abstract/: abstract.tex
Nexus-Resonance-Codex-tex-files/algorithm/: algorithm.tex
Nexus-Resonance-Codex-tex-files/introduction/: introduction.tex
Nexus-Resonance-Codex-tex-files/modular_exclusion/: modular_exclusion.tex
Nexus-Resonance-Codex-tex-files/theory_2048d_lattice/: theory_2048d_lattice.tex
demos/: rmsd-benchmark.html
docs/: DISTRIBUTED_COMPUTING_INTEGRATION.md  Models.md  NRC-Playground-Guide.md  architecture.md  index.md  math-foundations.md
docs/Nexus-Resonance-Codex-tex-files/: NRC-Protein-Folding.aux  NRC-Protein-Folding.tex  nrc.sty
docs/Nexus-Resonance-Codex-tex-files/abstract/: abstract.tex
docs/Nexus-Resonance-Codex-tex-files/ai_enhancements/: enhancements_1_10.tex  enhancements_21_30.tex
docs/Nexus-Resonance-Codex-tex-files/algorithm/: algorithm.tex
docs/Nexus-Resonance-Codex-tex-files/appendices/: python_verification.tex
docs/Nexus-Resonance-Codex-tex-files/conclusion/: conclusion.tex
docs/Nexus-Resonance-Codex-tex-files/disclaimer/: disclaimer.tex
docs/Nexus-Resonance-Codex-tex-files/entropy_collapse/: entropy_collapse.tex
docs/Nexus-Resonance-Codex-tex-files/introduction/: introduction.tex
docs/Nexus-Resonance-Codex-tex-files/modular_exclusion/: modular_exclusion.tex
docs/Nexus-Resonance-Codex-tex-files/practical_applications/: practical_applications.tex
docs/Nexus-Resonance-Codex-tex-files/theory_2048d_lattice/: theory_2048d_lattice.tex
docs/demos/: folding-demo.html  folding-demo.md  lattice-visualizer.md  protein-folding-showcase.html
docs/stylesheets/: extra.css
examples/: biological_mod9_verification.py  qrt_regularized_folding.py  thermodynamic_entropy_collapse.py
hf-spaces/: Dockerfile  requirements.txt
hf-spaces/nrc_protein_folder_live/: README.md  app.py  folder.py
hf-spaces/resonance-fold/: Dockerfile  README.md  app.py  biophysics.py  folder.py  library_data.txt  local_esmfold.py  nrc_engine.py  reporting.py  requirements.txt
hf-spaces/resonance-fold/temp_nrc_test/: metadata.json
huggingface/: MODEL_CARD.md  push_to_hub.py
nrc_protein_folder_live/: README.md  app.py  folder.py  requirements.txt
proofs/: proof_01_giza_resonance.py  proof_01_qrt_damping.py  proof_02_modular_exclusion.py  proof_03_entropy_collapse.py  proof_04_phi_identities.py  proof_05_qrt_expansion.py  proof_06_mst_lyapunov.py  proof_07_tupt_exclusion.py  proof_08_pisano_period.py  proof_09_navier_stokes.py  proof_10_shard_folding.py
resonance-fold/: README.md  app.py  requirements.txt
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/DISTRIBUTED_COMPUTING_INTEGRATION/: index.html
site/Nexus-Resonance-Codex-tex-files/: NRC-Protein-Folding.tex
site/Nexus-Resonance-Codex-tex-files/abstract/: abstract.tex
site/Nexus-Resonance-Codex-tex-files/ai_enhancements/: enhancements_11_20.tex
site/Nexus-Resonance-Codex-tex-files/algorithm/: algorithm.tex
site/Nexus-Resonance-Codex-tex-files/introduction/: introduction.tex
site/Nexus-Resonance-Codex-tex-files/modular_exclusion/: modular_exclusion.tex
site/architecture/: index.html
site/demos/: folding-demo.html
site/search/: search_index.json
src/: __init__.py
src/nrc_bio/: __about__.py  __init__.py  accelerator.py
src/nrc_math/: __init__.py  mst.py  phi.py  qrt.py  tupt_exclusion.py
src/resonance_fold/: __about__.py  __init__.py  accelerator.py  nrc_forcefield.py
tests/: test_accelerator.py  test_folding_physics.py
visualizations/: 256D-Lattice-Visualizer.html
wiki/: Getting-Started.md  Home.md  Models.md  Usage.md
(+11 files in other folders)
