[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nrc_bio"
dynamic = ["version"]
description = "Protein folding algorithms built over the 2048D Nexus Resonance Lattice."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE.md"}
keywords = ["biology", "Protein-Folding", "golden-ratio", "resonance", "openfold", "boinc"]
authors = [
    { name = "James Trageser", email = "Nexus-Resonance-Codex@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "biopython>=1.80",
    # Connects back to the mathematical core
    "nrc",
]

[project.urls]
Documentation = "https://github.com/Nexus-Resonance-Codex/Protein-Folding"
Issues = "https://github.com/Nexus-Resonance-Codex/Protein-Folding/issues"
Source = "https://github.com/Nexus-Resonance-Codex/Protein-Folding"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
]

[tool.hatch.version]
path = "src/nrc_bio/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I"]
extend-ignore = ["E501"]
exclude = ["tests", "notebooks"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = false
ignore_missing_imports = true
