[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resonance-fold"
version = "1.0.0"
description = "Professional-Grade Protein Folding via φ^∞ Lattice Resonance"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "biopython>=1.83.0",
    "scipy>=1.12.0",
    "huggingface-hub>=0.21.0",
    "gradio>=4.26.0",
    "plotly>=5.20.0",
    "narwhals>=0.10.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "rdkit>=2023.9.5",
    "fair-esm>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.9.0",
    "ruff>=0.3.0",
    "hypothesis>=6.98.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/resonance_fold"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
warn_redundant_casts = false
warn_unused_ignores = false
disallow_any_generics = false
check_untyped_defs = false
disallow_untyped_defs = false
explicit_package_bases = true
namespace_packages = true
mypy_path = "src"
exclude = ["examples", "tests", "huggingface"]

[tool.ruff]
line-length = 150
target-version = "py312"
